Fixed dropdown list z-index to always apear on top

--- a/frontend/src/components/styles.css
+++ b/frontend/src/components/styles.css
@@ -372,6 +372,7 @@ body {
 }
 
 .dropdown-list {
+  z-index: 100;
   max-height: calc(100vh - 200px);
   overflow-y: auto;
 }
